--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ $(document).ready(function(){
 диагноза. Диагноз устанавливает врач при очном осмотре и после 
 необходимых исследований. Центр здоровья «URGENT» не несёт 
 ответственности за возможные негативные последствия, возникшие в 
-результате использования информации, размещенной на сайте <?php echo $baseurl?> <br><br></div></div></div></div></div></div>
+результате использования информации, размещенной на сайте https://urgent-clinic.github.io/ <br><br></div></div></div></div></div></div>
 </div>
 <!--/footer-->
 <!--/allrecords--><!-- Stat -->
